--- a/.github/workflows/profile-readme.yml
+++ b/.github/workflows/profile-readme.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    
     - name: Generate README.md
       uses: teoxoy/profile-readme-stats@v3
       with:
@@ -21,12 +22,18 @@ jobs:
         template: ./TEMPLATE.md
         readme: ./README.md
         includeForks: false
-    - name: Update README.md
+
+    - name: Configure Git
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+    - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
-        git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-        git add .
-        git commit -m "Update README"
-        git push
+          git add README.md
+          git commit -m "Update README"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:$(git rev-parse --abbrev-ref HEAD)
         fi
